project(old)

add_executable(binary_search_bst binary_search_bst.cpp)
add_executable(cycle cycle.cpp)
add_executable(deadlock_cycle deadlock_cycle.cpp)
add_executable(directed_cycle directed_cycle.cpp)
add_executable(gcd gcd.cpp)
add_executable(graph_bfs graph_bfs.cpp)
add_executable(graph_dfs graph_dfs.cpp)
add_executable(graph_print graph_print.cpp)
add_executable(knapsack knapsack.cpp)
add_executable(lexicographical_compare lexicographical_compare.cpp)
add_executable(levenshtein_distance levenshtein_distance.cpp)
add_executable(list_reverse list_reverse.cpp)
add_executable(simple_path simple_path.cpp)
add_executable(topological topological.cpp)
add_executable(topological_acpp topological_acpp.cpp)
add_executable(tree_nodes_within_distance tree_nodes_within_distance.cpp)
add_executable(tree_print tree_print.cpp)
add_executable(tree_traversal tree_traversal.cpp)
add_executable(partition_gen Partition_gen.cpp)